Correct minor grammatical errors in 4.html for improved clarity on project deactivation and data collection instructions.

--- a/4.html
+++ b/4.html
@@ -487,7 +487,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">2. All clients in the closing HMIS shelter project must be exited</div>
                             <div class="line line-context">3. All clients that spend the first night in the new HMIS shelter must have data collected for</div>
                             <div class="line line-context">a new shelter project entry</div>
-                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed.</div>
+                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed).</div>
                             <div class="line line-context">Record if the project is a 'HOPWA-funded Medically Assisted Living Facility' or not, or that the</div>
                             <div class="line line-context">project is not HOPWA-funded (HOPWA funding source will also be identified in 2.06 Funding</div>
                             <div class="line line-context">Response Descriptions Field Name Response/Data Description</div>
@@ -548,7 +548,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">When enrolling a client who already has a record in the HMIS, verify that the SSN in the system</div>
                             <div class="line line-context">is accurate and correct it if it is not. Do not replace a 9-digit SSN with the 4-digit SSN on existing</div>
                             <div class="line line-context">clients unless the client has requested this.</div>
-                            <div class="line line-changed">Some clients may not have access to or be able to recall their SSN at the time of data</div>
+                            <div class="line line-changed">Some clients may not have access to or be able to recall their SSN at the time of data collection.</div>
                             <div class="line line-context">Response Descriptions Field Name Response/Data Type Description</div>
                             <div class="line line-context">Social Security [9 digits]</div>
                             <div class="line line-context">SSN Data Quality Full SSN reported A complete and valid SSN is</div>
