Refine wording in 4.html to enhance clarity by removing unnecessary phrases in household inclusion criteria.

--- a/4.html
+++ b/4.html
@@ -944,7 +944,7 @@
                             <div class="line line-context">Household size of 5 or more No</div>
                             <div class="line line-context">requiring at least 3 bedrooms (due</div>
                             <div class="line line-changed">to age/gender mix)</div>
-                            <div class="line line-changed">Household includes one or more No</div>
+                            <div class="line line-changed">Household includes one or more</div>
                             <div class="line line-changed">members of an overrepresented</div>
                             <div class="line line-changed">population in the homelessness</div>
                             <div class="line line-changed">system when compared to the</div>
@@ -965,7 +965,7 @@
                             <div class="line line-context">Household size of 5 or more No</div>
                             <div class="line line-context">requiring at least 3 bedrooms (due</div>
                             <div class="line line-changed">to demographic mix)</div>
-                            <div class="line line-changed">Households which may include one No</div>
+                            <div class="line line-changed">Households which may include one</div>
                             <div class="line line-changed">or more members meeting other</div>
                             <div class="line line-changed">criteria for targeting prevention</div>
                             <div class="line line-changed">determined by the CoC</div>
