Fixing diff display on HMIS Updates Page

--- a/hmis-updates-2025/index.html
+++ b/hmis-updates-2025/index.html
@@ -864,45 +864,45 @@
                             <div class="line line-context">Client doesn't know</div>
                             <div class="line line-context">Client prefers not to answer</div>
                             <div class="line line-context">Data not collected</div>
-                            <div class="line line-changed">R3 Sexual Orientation</div>
-                            <div class="line line-changed">The purpose is to identify the sexual orientation of all heads of household and adults served in RHY</div>
-                            <div class="line line-changed">Data Collection Instruction</div>
-                            <div class="line line-changed">Header Instructions</div>
-                            <div class="line line-changed">Funder: Program-Component HHS: RHY – Collection required for all components</div>
-                            <div class="line line-changed">HUD: CoC – Youth Homeless Demonstration Program</div>
-                            <div class="line line-changed">(YHDP) – collection required for all components</div>
-                            <div class="line line-changed">HUD: CoC – Permanent Supportive Housing</div>
-                            <div class="line line-changed">HUD: Unsheltered Special NOFO – Collection required</div>
-                            <div class="line line-changed">for Permanent Supportive Housing</div>
-                            <div class="line line-changed">HUD: Rural Special NOFO – Collection required for all</div>
-                            <div class="line line-changed">Permanent Supportive Housing</div>
-                            <div class="line line-changed">Project Type Applicability Emergency Shelter - Entry Exit</div>
-                            <div class="line line-changed">Transitional Housing</div>
-                            <div class="line line-changed">PH – Permanent Supportive Housing (disability required</div>
-                            <div class="line line-changed">Header Instructions</div>
-                            <div class="line line-changed">Street Outreach</div>
-                            <div class="line line-changed">PH – Housing Only</div>
-                            <div class="line line-changed">PH – Housing with Services (no disability required for</div>
-                            <div class="line line-changed">Homelessness Prevention</div>
-                            <div class="line line-changed">PH – Rapid Re-Housing</div>
-                            <div class="line line-changed">Data Collected About Head of Household and Adults</div>
-                            <div class="line line-changed">Collection Point Project Start</div>
-                            <div class="line line-changed">Response Descriptions Field Name Response Category/ Data Type</div>
-                            <div class="line line-changed">S exual Orientation Heterosexual</div>
-                            <div class="line line-changed">Questioning/Unsure</div>
-                            <div class="line line-changed">Client doesn't know</div>
-                            <div class="line line-changed">Client prefers not to answer</div>
-                            <div class="line line-changed">Data not collected</div>
-                            <div class="line line-changed">If other, please describe [Text]</div>
-                            <div class="line line-changed">R4 Last Grade Completed</div>
-                            <div class="line line-changed">The purpose is to identify the educational attainment of youth served in RHY projects as well as,</div>
-                            <div class="line line-changed">when appropriate, measure a change in education from project start to project exit for all Head</div>
-                            <div class="line line-changed">of Households and youth.</div>
-                            <div class="line line-changed">Data Collection Instruction</div>
-                            <div class="line line-changed">Header Instructions</div>
-                            <div class="line line-changed">Funder: Program-Component HUD: HUD-VASH – Collection required for HUD/VASH-</div>
-                            <div class="line line-changed">HHS: RHY – Collection required for all components except</div>
-                            <div class="line line-changed">for Street Outreach</div>
+                            <div class="line line-removed">R3 Sexual Orientation</div>
+                            <div class="line line-removed">The purpose is to identify the sexual orientation of all heads of household and adults served in RHY</div>
+                            <div class="line line-removed">Data Collection Instruction</div>
+                            <div class="line line-removed">Header Instructions</div>
+                            <div class="line line-removed">Funder: Program-Component HHS: RHY – Collection required for all components</div>
+                            <div class="line line-removed">HUD: CoC – Youth Homeless Demonstration Program</div>
+                            <div class="line line-removed">(YHDP) – collection required for all components</div>
+                            <div class="line line-removed">HUD: CoC – Permanent Supportive Housing</div>
+                            <div class="line line-removed">HUD: Unsheltered Special NOFO – Collection required</div>
+                            <div class="line line-removed">for Permanent Supportive Housing</div>
+                            <div class="line line-removed">HUD: Rural Special NOFO – Collection required for all</div>
+                            <div class="line line-removed">Permanent Supportive Housing</div>
+                            <div class="line line-removed">Project Type Applicability Emergency Shelter - Entry Exit</div>
+                            <div class="line line-removed">Transitional Housing</div>
+                            <div class="line line-removed">PH – Permanent Supportive Housing (disability required</div>
+                            <div class="line line-removed">Header Instructions</div>
+                            <div class="line line-removed">Street Outreach</div>
+                            <div class="line line-removed">PH – Housing Only</div>
+                            <div class="line line-removed">PH – Housing with Services (no disability required for</div>
+                            <div class="line line-removed">Homelessness Prevention</div>
+                            <div class="line line-removed">PH – Rapid Re-Housing</div>
+                            <div class="line line-removed">Data Collected About Head of Household and Adults</div>
+                            <div class="line line-removed">Collection Point Project Start</div>
+                            <div class="line line-removed">Response Descriptions Field Name Response Category/ Data Type</div>
+                            <div class="line line-removed">S exual Orientation Heterosexual</div>
+                            <div class="line line-removed">Questioning/Unsure</div>
+                            <div class="line line-removed">Client doesn't know</div>
+                            <div class="line line-removed">Client prefers not to answer</div>
+                            <div class="line line-removed">Data not collected</div>
+                            <div class="line line-removed">If other, please describe [Text]</div>
+                            <div class="line line-context">R4 Last Grade Completed</div>
+                            <div class="line line-context">The purpose is to identify the educational attainment of youth served in RHY projects as well as,</div>
+                            <div class="line line-context">when appropriate, measure a change in education from project start to project exit for all Head</div>
+                            <div class="line line-context">of Households and youth.</div>
+                            <div class="line line-context">Data Collection Instruction</div>
+                            <div class="line line-context">Header Instructions</div>
+                            <div class="line line-context">Funder: Program-Component HUD: HUD-VASH – Collection required for HUD/VASH-</div>
+                            <div class="line line-context">HHS: RHY – Collection required for all components except</div>
+                            <div class="line line-context">for Street Outreach</div>
                             <div class="line line-context">VA: SSVF – Collection required for RRH and</div>
                             <div class="line line-context">Homelessness Prevention</div>
                             <div class="line line-context">Header Instructions</div>
@@ -918,15 +918,15 @@
                             <div class="line line-context">Client doesn't know</div>
                             <div class="line line-context">Client prefers not to answer</div>
                             <div class="line line-context">Data not collected</div>
-                            <div class="line line-changed">R4 Last Grade Completed</div>
-                            <div class="line line-changed">The purpose is to identify the educational attainment of youth served in RHY projects as well as,</div>
-                            <div class="line line-changed">when appropriate, measure a change in education from project start to project exit for all Head</div>
-                            <div class="line line-changed">of Households and youth.</div>
-                            <div class="line line-changed">Data Collection Instruction</div>
-                            <div class="line line-changed">Header Instructions</div>
-                            <div class="line line-changed">Funder: Program-Component HUD: HUD-VASH – Collection required for HUD/VASH-</div>
-                            <div class="line line-changed">HHS: RHY – Collection required for all components except</div>
-                            <div class="line line-changed">for Street Outreach</div>
+                            <div class="line line-context">R4 Last Grade Completed</div>
+                            <div class="line line-context">The purpose is to identify the educational attainment of youth served in RHY projects as well as,</div>
+                            <div class="line line-context">when appropriate, measure a change in education from project start to project exit for all Head</div>
+                            <div class="line line-context">of Households and youth.</div>
+                            <div class="line line-context">Data Collection Instruction</div>
+                            <div class="line line-context">Header Instructions</div>
+                            <div class="line line-context">Funder: Program-Component HUD: HUD-VASH – Collection required for HUD/VASH-</div>
+                            <div class="line line-context">HHS: RHY – Collection required for all components except</div>
+                            <div class="line line-context">for Street Outreach</div>
                             <div class="line line-context">Header Instructions</div>
                             <div class="line line-context">VA: SSVF – Collection required for RRH and</div>
                             <div class="line line-context">Homelessness Prevention</div>
