Update context lines in HMIS Updates Page to improve clarity  regarding misspellings

--- a/hmis-updates-2025/index.html
+++ b/hmis-updates-2025/index.html
@@ -799,12 +799,12 @@
                             <div class="line line-context">If No for "Youth Eligible for RHY Out of age range</div>
                             <div class="line line-context">Reason why services are not</div>
                             <div class="line line-changed">f unded by BCP grant</div>
-                            <div class="line line-changed">Ward of the State – Immediate Reunification</div>
-                            <div class="line line-changed">Ward of the Criminal Justice System - Immediate</div>
-                            <div class="line line-changed">If Yes for "Youth Eligible for No</div>
-                            <div class="line line-changed">Client doesn't know</div>
-                            <div class="line line-changed">Client prefers not to answer</div>
-                            <div class="line line-changed">Data not collected</div>
+                            <div class="line line-context">Ward of the State – Immediate Reunification</div>
+                            <div class="line line-context">Ward of the Criminal Justice System - Immediate</div>
+                            <div class="line line-context">If Yes for "Youth Eligible for No</div>
+                            <div class="line line-context">Client doesn't know</div>
+                            <div class="line line-context">Client prefers not to answer</div>
+                            <div class="line line-context">Data not collected</div>
                             <div class="line line-context">R3 Sexual Orientation</div>
                             <div class="line line-context">The purpose is to identify the sexual orientation of all heads of household and adults served in RHY</div>
                             <div class="line line-context">Data Collection Instruction</div>
@@ -821,12 +821,12 @@
                             <div class="line line-context">If No for "Youth Eligible for RHY Out of age range</div>
                             <div class="line line-context">Reason why services are not</div>
                             <div class="line line-changed">funded by BCP grant</div>
-                            <div class="line line-changed">Ward of the State – Immediate Reunification</div>
-                            <div class="line line-changed">Ward of the Criminal Justice System - Immediate</div>
-                            <div class="line line-changed">If Yes for "Youth Eligible for No</div>
-                            <div class="line line-changed">Client doesn't know</div>
-                            <div class="line line-changed">Client prefers not to answer</div>
-                            <div class="line line-changed">Data not collected</div>
+                            <div class="line line-context">Ward of the State – Immediate Reunification</div>
+                            <div class="line line-context">Ward of the Criminal Justice System - Immediate</div>
+                            <div class="line line-context">If Yes for "Youth Eligible for No</div>
+                            <div class="line line-context">Client doesn't know</div>
+                            <div class="line line-context">Client prefers not to answer</div>
+                            <div class="line line-context">Data not collected</div>
                             <div class="line line-context">R4 Last Grade Completed</div>
                             <div class="line line-context">The purpose is to identify the educational attainment of youth served in RHY projects as well as,</div>
                             <div class="line line-context">when appropriate, measure a change in education from project start to project exit for all Head</div>
@@ -965,11 +965,11 @@
                             <div class="line line-context">If Yes for "Ever received No</div>
                             <div class="line line-context">anything in exchange for</div>
                             <div class="line line-changed">I n the last three months</div>
-                            <div class="line line-changed">Client doesn't know</div>
-                            <div class="line line-changed">Client prefers not to answer</div>
-                            <div class="line line-changed">Data not collected</div>
-                            <div class="line line-changed">If Yes for "Ever received 1-3</div>
-                            <div class="line line-changed">anything in exchange for</div>
+                            <div class="line line-context">Client doesn't know</div>
+                            <div class="line line-context">Client prefers not to answer</div>
+                            <div class="line line-context">Data not collected</div>
+                            <div class="line line-context">If Yes for "Ever received 1-3</div>
+                            <div class="line line-context">anything in exchange for</div>
                             <div class="line line-context">H ow many times</div>
                             <div class="line line-context">Client doesn't know</div>
                             <div class="line line-context">Client prefers not to answer</div>
@@ -986,11 +986,11 @@
                             <div class="line line-context">If Yes for "Ever received No</div>
                             <div class="line line-context">anything in exchange for</div>
                             <div class="line line-changed">In the last three months</div>
-                            <div class="line line-changed">Client doesn't know</div>
-                            <div class="line line-changed">Client prefers not to answer</div>
-                            <div class="line line-changed">Data not collected</div>
-                            <div class="line line-changed">If Yes for "Ever received 1-3</div>
-                            <div class="line line-changed">anything in exchange for</div>
+                            <div class="line line-context">Client doesn't know</div>
+                            <div class="line line-context">Client prefers not to answer</div>
+                            <div class="line line-context">Data not collected</div>
+                            <div class="line line-context">If Yes for "Ever received 1-3</div>
+                            <div class="line line-context">anything in exchange for</div>
                             <div class="line line-context">Client doesn't know</div>
                             <div class="line line-context">Client prefers not to answer</div>
                             <div class="line line-context">Data not collected</div>
