Enhance formatting in changelog for "3.917 Prior Living Situation" entry and update context lines for clarity.

--- a/hmis-updates-2025/index.html
+++ b/hmis-updates-2025/index.html
@@ -338,7 +338,7 @@
                         <span class="change-type type-modified">Modified</span>
                     </div>
                     <div class="change-description">
-                        Correction to the 3.917 Prior Living Situation data element formatting of the 2024 change log.
+                        Added line break in changelog entry "3.917 Prior Living Situation" for improved formatting.
                     </div>
                     <div class="change-location">Lines 170-175 → 170-176</div>
                 </div>
@@ -356,11 +356,11 @@
                             <div class="line line-context">June 2024 Minor formatting and typo corrections.</div>
                             <div class="line line-context">V1.6 Added descriptions to Program Specific Data Elements and Common Program Specific Data Elements sections.</div>
                             <div class="line line-context">Universal Data Elements - Added missing "3.917 Prior Living Situation" to table</div>
-                            <div class="line line-changed">3.917 Prior Living Situation - Revised Flow Charts for better resolution and typo</div>
-                            <div class="line line-changed">Added "other" project type applicability for collection requirements for projects</div>
-                            <div class="line line-changed">funded by HUD: Pay for Success (PFS) that do not provide permanent housing</div>
-                            <div class="line line-changed">in 3.20 Housing Move-in Date.</div>
-                            <div class="line line-changed">Updated Common Data Element data collection instructions for projects funded</div>
+                            <div class="line line-changed">3.917 Prior Living Situation - Revised Flow Charts for better resolution and typo corrections.</div>
+                            <div class="line line-context">Added "other" project type applicability for collection requirements for projects</div>
+                            <div class="line line-context">funded by HUD: Pay for Success (PFS) that do not provide permanent housing</div>
+                            <div class="line line-context">in 3.20 Housing Move-in Date.</div>
+                            <div class="line line-context">Updated Common Data Element data collection instructions for projects funded</div>
                             <div class="line line-context">Introduction to the HMIS Data Standards</div>
                             <div class="line line-context">HMIS Data Standards Overview</div>
                             <div class="line line-context">A Homeless Management Information System (HMIS) is the information system designated by a</div>
@@ -378,10 +378,10 @@
                             <div class="line line-context">Universal Data Elements - Added missing "3.917 Prior Living Situation" to table</div>
                             <div class="line line-changed">3.917 Prior Living Situation</div>
                             <div class="line line-changed">Revised Flow Charts for better resolution and typo corrections.</div>
-                            <div class="line line-changed">Added "other" project type applicability for collection requirements for projects</div>
-                            <div class="line line-changed">funded by HUD: Pay for Success (PFS) that do not provide permanent housing</div>
-                            <div class="line line-changed">in 3.20 Housing Move-in Date.</div>
-                            <div class="line line-changed">Updated Common Data Element data collection instructions for projects funded</div>
+                            <div class="line line-context">Added "other" project type applicability for collection requirements for projects</div>
+                            <div class="line line-context">funded by HUD: Pay for Success (PFS) that do not provide permanent housing</div>
+                            <div class="line line-context">in 3.20 Housing Move-in Date.</div>
+                            <div class="line line-context">Updated Common Data Element data collection instructions for projects funded</div>
                             <div class="line line-context">Version Revision</div>
                             <div class="line line-context">April 2025 The Person Centered Approaches to HMIS Data Collection; Emergency Shelter</div>
                             <div class="line line-context">V1.7 under 2.0 Project Information; Universal Data Elements table; 3.01 Name; 3.02</div>
