Update 2025 HMIS Updates page for clarity and new advisory
- Revise subtitle for accuracy regarding the FY24 HMIS Data Standards Manual
- Correct document comparison reference to reflect updated file naming
- Enhance summary section to clarify the nature of the 2025 changes
- Add implementation advisory regarding future data element transition by Eccovia

--- a/hmis-updates-2025/index.html
+++ b/hmis-updates-2025/index.html
@@ -313,9 +313,9 @@
                 </div>
                 <div class="header-text-area">
                     <h1>2025 HMIS Updates</h1>
-                    <div class="subtitle">Comprehensive report of changes and compliance updates in the 2025 HMIS Data Standards Manual</div>
+                    <div class="subtitle">Comprehensive report of changes and compliance updates in the 2025 changes to the FY24 HMIS Data Standards Manual</div>
                     <div class="meta-info">
-                        <strong>Document Comparison:</strong> HMIS-Data-Standards-Manual-2024OLD.pdf → HMIS-Data-Standards-Manual-2025.pdf<br>
+                        <strong>Document Comparison:</strong> HMIS-Data-Standards-Manual-2024.pdf → HMIS-Data-Standards-Manual-2024(Updated).pdf<br>
                         <strong>Generated:</strong> July 18, 2025 at 14:41:05<br>
                         <strong>Total Changes Found:</strong> 10 significant modifications
                     </div>
@@ -325,7 +325,7 @@
         <!-- Summary Section -->
         <div class="summary-section">
             <h2>2025 HMIS Data Standards Updates</h2>
-            <p>Revisions to the FY24 HMIS Data Standards Manual for implementation on October 1, 2025. No separate FY25 manual was released; these updates represent the official 2025 changes to data collection requirements.</p>
+            <p>Revisions to the FY24 HMIS Data Standards Manual for implementation on October 1, 2025. No separate FY25 manual was released; these updates represent the official 2025 changes to the FY24 Data Standards Manual.</p>
         </div>
 
         <!-- Changes Container -->
@@ -769,6 +769,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="implementation-advisory" style="background: #d1ecf1; border: 1px solid #bee5eb; border-radius: 8px; padding: 16px; margin-top: 20px; font-family: 'Inter', sans-serif; font-size: 14px; color: #0c5460; display: flex; align-items: flex-start; gap: 10px;">
+                    <i class="fas fa-info-circle" style="margin-top: 2px; flex-shrink: 0;"></i>
+                    <div>
+                        <strong>Implementation Advisory:</strong> HMIS vendor <a href="https://help.eccovia.com/data-standards/fy2026-data-standards-update" target="_blank" style="color: #0c5460; text-decoration: underline;">Eccovia</a> has indicated that this data element will transition to a 'Sex at Birth' data element in future system releases.
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -933,12 +939,6 @@
                             <div class="line line-context">Project Type Applicability Emergency Shelter - Entry Exit</div>
                             <div class="line line-context">Transitional Housing</div>
                         </div>
-                    </div>
-                </div>
-                <div class="implementation-advisory" style="background: #d1ecf1; border: 1px solid #bee5eb; border-radius: 8px; padding: 16px; margin-top: 20px; font-family: 'Inter', sans-serif; font-size: 14px; color: #0c5460; display: flex; align-items: flex-start; gap: 10px;">
-                    <i class="fas fa-info-circle" style="margin-top: 2px; flex-shrink: 0;"></i>
-                    <div>
-                        <strong>Implementation Advisory:</strong> HMIS vendor <a href="https://help.eccovia.com/data-standards/fy2026-data-standards-update" target="_blank" style="color: #0c5460; text-decoration: underline;">Eccovia</a> has indicated that this data element will transition to a 'Sex at Birth' data element in future system releases.
                     </div>
                 </div>
             </div>
