Add Housing Hope ROI document link to navbar and documents index
- Include link to Housing Hope ROI document in the navigation bar
- Add corresponding link in the documents index section for easy access

--- a/documents/index.html
+++ b/documents/index.html
@@ -260,6 +260,11 @@
                     <i class="fas fa-shield-alt"></i>
                     HMIS ROI
                 </a>
+
+                <a href="/Housing-Hope-ROI.docx" target="_blank" class="document-link">
+                    <i class="fas fa-shield-alt"></i>
+                    Housing Hope ROI
+                </a>
                 
                 <a href="/Occupancy Departure Guide.pdf" target="_blank" class="document-link">
                     <i class="fas fa-home"></i>
