--- a/navbar.html
+++ b/navbar.html
@@ -75,6 +75,7 @@
                         <li><a class="dropdown-item" href="/Fenn Jorstad.pdf" target="_blank">Fenn Jorstad (Required for Adult Assessments)</a></li>
                         <li><a class="dropdown-item" href="/Housing Stability Plan.pdf" target="_blank">Housing Stability Plan</a></li>
                         <li><a class="dropdown-item" href="/HMISROI.pdf" target="_blank">HMIS ROI</a></li>
+                        <li><a class="dropdown-item" href="/Housing-Hope-ROI.docx" target="_blank">Housing Hope ROI</a></li>
                         <li><a class="dropdown-item" href="/Occupancy Departure Guide.pdf" target="_blank">Occupancy Departure Guide</a></li>
                     </ul>
                 </li>
