--- a/Entry/index.html
+++ b/Entry/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adding Family Members in Apricot</title>
+    <title>Adding Family Members to an Existing Family in Apricot</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -520,7 +520,7 @@
                     <i class="fas fa-user-plus"></i>
                 </div>
                 <div class="header-text-area">
-                    <h1>Adding Family Members</h1>
+                    <h1>Adding Family Members to an Existing Family</h1>
                     <div class="subtitle">Complete guide for adding new family members to Housing Hope programs in Apricot</div>
                 </div>
             </div>
@@ -535,7 +535,7 @@
                     <span class="step-number">1</span>
                     Email Christine and Dane
                 </h2>
-                <p>When a newborn joins a family, a child is reunited with a parent, or anyone is added to a lease for any reason, notify the data team promptly. Your notification should include the person's name and birthdate.</p>
+                <p>When a newborn joins a family, a child is reunited with a parent, or anyone is added to a lease for any reason, notify the data team promptly. Your notification should include the person's name and birthdate. This information should be provided to the data team as soon as you gain knowledge of it, and no longer than 3 days after move in.</p>
                 <img src="/OUTLOOK_1AuXR9RCC0.png" alt="Email Notification Image" class="scaled-image"/>
             </div>
 
