Refine guidance on 18th birthday update assessments
- Update content to clarify that data for 18th birthday assessments should be entered the month it is requested, aligning it with annual assessment expectations
- Maintain existing requirements for other updates to be completed within three days of awareness

--- a/updates/index.html
+++ b/updates/index.html
@@ -656,7 +656,7 @@
         <div class="alert-icons">⚠️</div>
         <div class="alert-text">Timeliness for Update Assessments</div>
         <p>
-          Our local HMIS has indicated some limited flexibility for <strong>18th birthday update assessments</strong>; these do not need to be completed within three days of the birthday. That said, please enter the data as quickly as possible.
+          Our local HMIS has indicated some limited flexibility for <strong>18th birthday update assessments</strong>; these do not need to be completed within three days of the birthday. That said, please enter the data the month it is requested, treating this as any other Annual Assessment.
         </p>
         <p style="margin-top: 0.5rem;">
           For all <strong>other updates</strong> (income, household composition, benefits, insurance, etc.), there is <strong>no change</strong> to expectations: complete updates <strong>within three days</strong> of becoming aware of the change.
