Revise content for move-in assessment guidance
- Reorder and clarify the explanation regarding the necessity of move-in assessments, emphasizing that no new assessment is required if no changes have occurred since intake.
- Expand the guidance on when updates are necessary, detailing specific circumstances that warrant an update to ensure compliance with HUD standards.

--- a/updates/index.html
+++ b/updates/index.html
@@ -564,10 +564,10 @@
           Move-in Assessment Overview
         </h2>
         <p>
-          <strong>There is no requirement to complete a new assessment upon move-in.</strong> This page outlines what must be updated during a project stay to keep HUD data accurate and current. If any of the detailed changes below have occurred since the client's intake, an <strong>Update Assessment</strong> is required to record those changes. If nothing has changed, no move-in assessment is needed.
+          This page outlines what must be updated during a project stay to keep HUD data accurate and current. If any of the detailed changes below have occurred since the client's intake, an <strong>Update Assessment</strong> is required to record those changes. If nothing has changed, no move-in assessment is needed. <strong>There is no requirement to complete a new assessment upon move-in.</strong> 
         </p>
         <p>
-          Use this guidance whenever a household composition, income, employment, or benefit status changes (including when a youth turns 18). These rules apply throughout the stay and ensure that the HMIS record remains complete and compliant with HUD standards.
+          Use this guidance whenever any of the following occur: income changes, employment status changes, non-cash benefit changes, health insurance changes, domestic violence status changes, when a minor child enters or leaves the household changing total household income, when a youth turns 18, or when income shifts between household members. Additionally, updates are recommended when there are changes in substance use, physical disability, developmental disability, chronic health condition, or mental health disorder. These rules apply throughout the stay and ensure that the HMIS record remains complete and compliant with HUD standards.
         </p>
       </div>
 
