--- a/updates/index.html
+++ b/updates/index.html
@@ -316,7 +316,7 @@
     @media print {
       * {
         -webkit-print-color-adjust: exact !important;
-        color-adjust: exact !important;
+        print-color-adjust: exact !important;
       }
       
       body {
