Update birth certificate submission guidance in Participant Profile Folder instructions
- Clarify the requirement for submitting a scanned birth certificate or state ID for adults alongside the social security card.
- Ensure instructions are clear and comprehensive for participants regarding necessary documentation.

--- a/Entry/index.html
+++ b/Entry/index.html
@@ -627,7 +627,7 @@
                             </a>
                         </div>
                     </li>
-                    <li>Submit scanned birth certificate and social security card to Participant Profile Folder (as soon as possible after entry).</li>
+                    <li>Submit scanned birth certificate (License or State ID if Adult) and social security card to Participant Profile Folder (as soon as possible after entry).</li>
                 </ul>
                 <div class="digital-note">
                     <strong>Note:</strong> Forms are for reference and guidance. All data must be recorded digitally in Apricot database.
